# snake_cpp

./: CMakeLists.txt  README.md  food.cpp  food.h  game.cpp  game.h  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  renderer_sfml.cpp  renderer_sfml.h  snake.cpp  snake.h  test_main.cpp
